[package]
name = "airtraffic-controller"
version = "0.1.0"
authors = ["William Gough <williamhenrygough@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.8.0"
mockall_derive = "0.8.0"

[dev-dependencies]